# ProxyDetection

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  deploy.sh  generate_pdf_guide.py  lead_auto.py  lead_automation.py  proxy_dashboard.py  prulady_submit.py  pyproject.toml  setup.sh
configs/: default.json
configs/profiles/: linux_firefox.json  mac_safari.json  windows_chrome.json
configs/templates/: prulady_insurance.json
data/: proxies.txt  sample_leads.csv
logs/: .gitkeep
src/: __init__.py
src/antidetect/: __init__.py  audio_spoof.py  behavioral.py  behavioral_ml.py  canvas_spoof.py  captcha_solver.py  fingerprint.py  http2_spoofing.py  matcher.py  network_layer.py  profile.py  tls_fingerprint.py  webgl_spoof.py
src/browser/: __init__.py  base.py  camoufox.py  cloakbrowser.py  launcher.py
src/campaign/: __init__.py  manager.py  sheets.py
src/cli/: __init__.py  main.py  validators.py
src/cli/commands/: __init__.py  campaign.py  config.py  leads.py  profile.py  proxy.py  submit.py
src/core/: __init__.py  engine.py  exceptions.py  session.py
src/leads/: __init__.py  generator.py  manager.py  parser.py  validator.py
src/proxy/: __init__.py  health_checker.py  rotator.py
src/proxy/providers/: __init__.py  base.py  dat_impulse.py  decodo.py
src/storage/: __init__.py  database.py  models.py
src/utils/: __init__.py  config.py  logger.py  retry.py  screenshot.py
templates/: __init__.py  submission_templates.py
tests/: __init__.py  conftest.py  test_behavioral.py  test_fingerprint.py  test_leads.py  test_proxy.py
