[project]
name = "proxy-detection"
version = "0.1.0"
description = "Lead Submission Automation System with Anti-Detection"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Rectoverso Media", email = "dev@rectoverso.com"}
]
license = {text = "MIT"}
keywords = ["automation", "anti-detection", "browser-fingerprinting", "lead-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # CLI
    "typer[all]>=0.12.0",
    "click>=8.1.0",

    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",

    # Async
    "asyncio>=3.4.3",
    "httpx>=0.27.0",

    # Config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # Logging
    "loguru>=0.7.0",

    # Utils
    "python-dateutil>=2.8.0",
    "rich>=13.0.0",
    "tenacity>=8.0.0",
    "fake-useragent>=1.4.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
camoufox = [
    "camoufox>=1.0.0",
]
playwright = [
    "playwright>=1.40.0",
]

[project.scripts]
pd = "src.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
